CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(jsnc LANGUAGES CXX VERSION 1.0.0)

INCLUDE_DIRECTORIES(include/)

SET(JSNC_TARGET_NAME jsnc)
SET(JSNC_PROJECT_SOURCE_DIR ${PROJECT_SOURCE_DIR}/src)
SET(JSNC_COMPILE_OPTIONS -Wall -Wextra -Wpedantic -Werror -Wno-sometimes-uninitialized -Wno-sign-compare)

ENABLE_TESTING()

# ADD_LIBRARY(${JSNC_TARGET_NAME}
#   ${JSNC_PROJECT_SOURCE_DIR}/jsnc.c
# )

ADD_EXECUTABLE(${JSNC_TARGET_NAME}
  ${JSNC_PROJECT_SOURCE_DIR}/jsnc.cc
)

TARGET_COMPILE_FEATURES(${JSNC_TARGET_NAME} PRIVATE cxx_std_17)

# TARGET_LINK_LIBRARIES(${JSNC_EXECUTABLE_NAME})

TARGET_COMPILE_OPTIONS(${JSNC_TARGET_NAME} PRIVATE ${JSNC_COMPILE_OPTIONS})
