PROJECT(jsnc-test)

SET(TEST_SOURCE_FILES test.c)

ADD_TEST(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
ADD_EXECUTABLE(${PROJECT_NAME} ${TEST_SOURCE_FILES})

GET_FILENAME_COMPONENT(LIBTAP_PATH ../libtap ABSOLUTE)

TARGET_INCLUDE_DIRECTORIES(
  ${PROJECT_NAME} PUBLIC "$<BUILD_INTERFACE:${LIBTAP_PATH}>")

TARGET_LINK_DIRECTORIES(${PROJECT_NAME} PUBLIC ${LIBTAP_PATH})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${JSNC_LIBRARY_NAME} ${LIBTAP_PATH}/libtap.a)
